{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 48,
  "lineage": "acc04240-faf2-700e-adba-a3930fbbeb96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00565a15a71e4402a",
            "arn": "arn:aws:ec2:us-west-2:976744072741:instance/i-080d7d96da2912faa",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080d7d96da2912faa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "minecraft-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d97224db2eed94a0",
            "private_dns": "ip-10-0-1-93.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-52-26-193-114.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.193.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:976744072741:key/11707ef7-eb2a-401d-991f-9afc2c57dc3c",
                "throughput": 125,
                "volume_id": "vol-0d56f4c79c637eb1e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bce51954c4f2d8df",
            "tags": {
              "Name": "minecraft-server"
            },
            "tags_all": {
              "Name": "minecraft-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ef60d7011bd3796"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.minecraft_key",
            "aws_security_group.minecraft_sg",
            "aws_subnet.minecraft_subnet",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "minecraft_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976744072741:internet-gateway/igw-07f07535e6be892d4",
            "id": "igw-07f07535e6be892d4",
            "owner_id": "976744072741",
            "tags": {
              "Name": "minecraft-igw"
            },
            "tags_all": {
              "Name": "minecraft-igw"
            },
            "vpc_id": "vpc-0029a453276d16907"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "minecraft_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976744072741:route-table/rtb-022837939c2ef3e4b",
            "id": "rtb-022837939c2ef3e4b",
            "owner_id": "976744072741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f07535e6be892d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minecraft-rt"
            },
            "tags_all": {
              "Name": "minecraft-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029a453276d16907"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.minecraft_igw",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "minecraft_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b22582dd0957846b",
            "route_table_id": "rtb-022837939c2ef3e4b",
            "subnet_id": "subnet-0bce51954c4f2d8df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.minecraft_igw",
            "aws_route_table.minecraft_rt",
            "aws_subnet.minecraft_subnet",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976744072741:security-group/sg-07ef60d7011bd3796",
            "description": "Security group for Minecraft server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ef60d7011bd3796",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              }
            ],
            "name": "minecraft-server-sg",
            "name_prefix": "",
            "owner_id": "976744072741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minecraft-sg"
            },
            "tags_all": {
              "Name": "minecraft-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029a453276d16907"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "minecraft_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976744072741:subnet/subnet-0bce51954c4f2d8df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bce51954c4f2d8df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976744072741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft-subnet"
            },
            "tags_all": {
              "Name": "minecraft-subnet"
            },
            "vpc_id": "vpc-0029a453276d16907"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "minecraft_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:976744072741:vpc/vpc-0029a453276d16907",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f230c5662a0d09e",
            "default_route_table_id": "rtb-05ab4359c9fa35489",
            "default_security_group_id": "sg-0534a896996bbd446",
            "dhcp_options_id": "dopt-0d154429f9c1fbb3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0029a453276d16907",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ab4359c9fa35489",
            "owner_id": "976744072741",
            "tags": {
              "Name": "minecraft-vpc"
            },
            "tags_all": {
              "Name": "minecraft-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}